# tg-remote-control-pc

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
crates/remote-core/: Cargo.toml
crates/remote-core/src/: config.rs  lib.rs  mock.rs
crates/remote-core/src/bot/: callback.rs  command.rs  dispatch.rs  mod.rs  ui.rs
crates/remote-core/src/media/: controller.rs  mod.rs  types.rs
crates/remote-os/: Cargo.toml
crates/remote-os/src/: dbus.rs  lib.rs  playerctl.rs
src/: main.rs
